WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226004
AirPlay icon of the Vimeo.com video player is missing
https://bugs.webkit.org/show_bug.cgi?id=226004
Summary
AirPlay icon of the Vimeo.com video player is missing
Peng Liu
Reported
2021-05-19 21:09:09 PDT
AirPlay icon of the Vimeo.com video player is missing
Attachments
Patch
(4.29 KB, patch)
2021-05-19 21:38 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
[fast-cq]Fix build failures
(4.34 KB, patch)
2021-05-19 22:07 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2021-05-19 21:30:24 PDT
<
rdar://78236387
>
Peng Liu
Comment 2
2021-05-19 21:38:48 PDT
Created
attachment 429131
[details]
Patch
Peng Liu
Comment 3
2021-05-19 22:07:34 PDT
Created
attachment 429135
[details]
[fast-cq]Fix build failures
EWS
Comment 4
2021-05-20 09:12:57 PDT
Committed
r277788
(
237949@main
): <
https://commits.webkit.org/237949@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429135
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug